# scent-quest-api/src/main/java/com/kun/scentquest/auth/RegistrationRequest.java
@@ -28,7 +28,9 @@ public class RegistrationRequest {
     private String email;
     @NotEmpty(message = "Password is required")
     @NotBlank(message = "Password is required")
-    @Size(min = 8, message = "Password must be at least 8 characters long")
+    @Size(min = 8, message = "Password must be at least 8 charactefavouriters long")
     private String password;
+    @NotBlank(message = "Secret key  is required")
+    private String secretKey;
 
 }
