# scent-quest-api/src/main/java/com/kun/scentquest/auth/ResetPasswordRequest.java
@@ -1,0 +1,28 @@
+package com.kun.scentquest.auth;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.Size;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Builder
+public class ResetPasswordRequest {
+
+    @NotEmpty(message = "Email is required")
+    @NotBlank(message = "Email is required")
+    private String email;
+    @NotEmpty(message = "Password is required")
+    @NotBlank(message = "Password is required")
+    @Size(min = 8, message = "Password must be at least 8 characters long")
+    private String password;
+    @NotEmpty(message = "New password is required")
+    @NotBlank(message = "New password is required")
+    @Size(min = 8, message = "New password must be at least 8 characters long")
+    private String newPassword;
+    private String name;
+
+}
