# scent-quest-ui/src/app/services/models/registration-request.ts
@@ -5,4 +5,5 @@ export interface RegistrationRequest {
   firstname: string;
   lastname: string;
   password: string;
+  secretKey: string;
 }
