# scent-quest-ui/src/app/services/models/reset-password-default-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ResetPasswordDefaultRequest {
+  email: string;
+  secretKey: string;
+}
