# scent-quest-ui/src/app/services/models/reset-password-request.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ResetPasswordRequest {
+  email: string;
+  name?: string;
+  newPassword: string;
+  password: string;
+}
